[package]
name = "wasm-game-core"
version = "0.1.0"
authors = ["naka <bacondoor1313@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"  # パニックフック用

[dependencies.web-sys]
version = "0.3.61"
features = [
  "console",
]

[profile.release]
# wasm-optでの最適化のため、デバッグなしでビルド
debug = false
# サイズ最適化
opt-level = "s"